SONARPY-1078 Add quick fixes for S1186 (EmptyFunctionCheck)